--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -610,30 +610,30 @@
 
     <!--voice commands-->
 
-    <string name="mobile_no_msg"></string>
-    <string name="otp_msg"></string>
-    <string name="registration_msg"></string>
-    <string name="height_success"></string>
-    <string name="height_fail"></string>
-    <string name="height_manually"></string>
+    <string name="mobile_no_msg">क्लीनिकस ऑन क्लाऊड मे आपका स्वागत है क्रिपया अपना मोबाईल नंबर डाले</string>
+    <string name="otp_msg">क्रिपया अपना ओ टी पी डाले</string>
+    <string name="registration_msg">क्रिपया अपनी जानकारी भरे</string>
+    <string name="height_success">height  सेन्सर नही मिला क्रिपया manually कनेक्ट करे</string>
+    <string name="height_fail">height सेन्सर के नीचे खडे रहे और गेट height बटण दबाये </string>
+    <string name="height_manually">क्रिपया height डाले </string>
 
-    <string name="actofit_msg"></string>
-    <string name="oximeter_msg"></string>
-    <string name="BloodPreeure_msg"></string>
-    <string name="temperature_success_msg"></string>
-    <string name="temperature_fail_msg"></string>
-    <string name="temperature_manually"></string>
+    <string name="actofit_msg">GoTo smartscale बटण पे क्लिक करें औरं वेईगं scale पे खडे रहे </string>
+    <string name="oximeter_msg">अपनी उंगली मशीन मे डाले औरं result का इंतजार करें </string>
+    <string name="BloodPreeure_msg">ब्लड pressure का कफ्फ हात में डाले और मशीन का स्टार्ट बटण दबाये </string>
+    <string name="temperature_success_msg">temperature सेन्सर नही मिला क्रिपया manually कनेक्ट करे </string>
+    <string name="temperature_fail_msg">temperature सेन्सर को माथे पे रखें औरं बटण दबाये</string>
+    <string name="temperature_manually">क्रिपया temperature डाले</string>
 
-    <string name="sync_scan_msg"></string>
-    <string name="start_test_msg"></string>
-    <string name="insert_strip_msg"></string>
-    <string name="add_blood_msg"></string>
-    <string name="new_strip_msg"></string>
+    <string name="sync_scan_msg">क्रिपया अपनी सिन्क प्लस मशीन का बटण दबा के रहे </string>
+    <string name="start_test_msg">क्रिपया टेस्ट स्टार्ट करें </string>
+    <string name="insert_strip_msg">क्रिपया स्ट्रीप डाले</string>
+    <string name="add_blood_msg">क्रिपया अपना खून डाले </string>
+    <string name="new_strip_msg">क्रिपया नयी स्ट्रीप डाले </string>
 
-    <string name="hemoglobin_msg"></string>
-    <string name="print_msg"></string>
-    <string name="print_reconnect_msg"></string>
-    <string name="print_result_msg"></string>
+    <string name="hemoglobin_msg">क्रिपया अपनी hemoglobin मशीन का पावर बटण दबा के रहे </string>
+    <string name="print_msg">क्रिपया प्रिन्ट बटण दबाये </string>
+    <string name="print_reconnect_msg">क्रिपया प्रिंटर दोबारा कनेक्ट करणे के लिये reconnect बटण दबाये</string>
+    <string name="print_result_msg">क्रिपया अपनी परिणाम कि परची लें </string>
 
 
 
