all set for multilanguages successfully added multilanguage

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -624,14 +624,15 @@
     <string name="temperature_success_msg">temperature सेन्सर को माथे पे रखें औरं बटण दबाये</string>
     <string name="temperature_manually">क्रिपया temperature डाले</string>
 
-    <string name="sync_scan_msg">क्रिपया अपनी सिन्क प्लस मशीन का बटण दबा के रहे </string>
+    <string name="sync_scan_msg">क्रिपया अपनी सिन्क प्लस मशीन का बटण दबा के रखे</string>
     <string name="start_test_msg">क्रिपया टेस्ट स्टार्ट करें </string>
     <string name="insert_strip_msg">क्रिपया स्ट्रीप डाले</string>
     <string name="add_blood_msg">क्रिपया अपना खून डाले </string>
     <string name="new_strip_msg">क्रिपया नयी स्ट्रीप डाले </string>
 
-    <string name="hemoglobin_msg">क्रिपया अपनी hemoglobin मशीन का पावर बटण दबा के रहे </string>
+    <string name="hemoglobin_msg">क्रिपया अपनी hemoglobin मशीन का पावर बटण दबा के रखे</string>
     <string name="print_msg">क्रिपया प्रिन्ट बटण दबाये </string>
     <string name="print_reconnect_msg">क्रिपया प्रिंटर दोबारा कनेक्ट करणे के लिये reconnect बटण दबाये</string>
     <string name="print_result_msg">क्रिपया अपनी परिणाम कि परची लें </string>
+
 </resources>
