Fixed textToSpeech bugs

--- a/app/src/main/res/values-mar/strings.xml
+++ b/app/src/main/res/values-mar/strings.xml
@@ -618,6 +618,7 @@
     <string name="height_manually">कृपया स्वतः height टाका</string>
 
     <string name="actofit_msg">कृपया गोटू smartscale बटण वर क्लिक करा आणि वेहिंग scale वर उभे रहा</string>
+    <string name="actofit_result_msg">कृपया next  बटण दाबा</string>
     <string name="oximeter_msg">कृपया आपले बोट मशीन मध्ये घाला आणि result ची वाट पहा</string>
     <string name="BloodPreeure_msg">कृपया blood pressure चा कफ्फ हातामध्ये घाला आणि मशीन चे स्टार्ट बटण दाबा</string>
     <string name="temperature_fail_msg">कृपया temperature सेन्सर कनेक्ट झाला नाही manually कनेक्ट करा </string>
