Feature tutorial videos first commit

--- a/app/src/main/res/values-mar/strings.xml
+++ b/app/src/main/res/values-mar/strings.xml
@@ -643,4 +643,15 @@
         <item>Marathi</item>
     </string-array>
 
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="title_activity_tutorial_videos">TutorialVideosActivity</string>
+
+    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
+    <string name="btn_skip_intro">Skip Intro</string>
+
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
+
 </resources>
+
+
