--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -646,6 +646,18 @@
         <item>English</item>
         <item>Hindi</item>
         <item>Marathi</item>
+
     </string-array>
 
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="title_activity_tutorial_videos">TutorialVideosActivity</string>
+
+    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
+    <string name="btn_skip_intro">Skip Intro</string>
+
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
+
 </resources>
+
+
