feature change language new changes done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -652,5 +652,6 @@
         <item>Hindi</item>
         <item>Marathi</item>
     </string-array>
+    <string name="title_activity_change_language">ChangeLanguageActivity</string>
 
 </resources>
