vision test result saved successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -661,4 +661,7 @@
     <!--fragment text-->
     <string name="left_vision" translatable="false">Left Vision</string>
     <string name="right_vision" translatable="false">Right Vision</string>
+    <string name="result_txt" translatable="false">Your Vision Result is</string>
+
+
 </resources>
