--- a/app/src/main/res/values-mar/strings.xml
+++ b/app/src/main/res/values-mar/strings.xml
@@ -644,4 +644,64 @@
         <item>Marathi</item>
     </string-array>
 
+    <string name="parameter_explanation">1. Body Fat Percentage: The body fat percentage (BFP) is the total mass of fat divided by
+total body mass, multiplied by 100; body fat includes essential body fat and storage body fat.
+The body fat percentage is a measure of fitness level.
+<!--2. Visceral Fat: Visceral fat is located deep in the core abdominal area, surrounding and
+protecting the vital organs. Even if your weight and body fat remain constant, as you get
+older the distribution of fat changes and is more likely to shift to the abdominal area.
+Ensuring you have a healthy level of visceral fat directly reduces the risk of certain diseases
+such as heart disease, high blood pressure and may delay the onset of type 2 diabetes.
+3. Muscle Mass: The predicted weight of muscle in your body. Muscle mass includes the
+skeletal muscles, smooth muscles such as cardiac and digestive muscles and the water
+contained in these muscles. Muscles act as an engine in consuming energy. As your muscle
+mass increases, the rate at which you burn energy (calories) increases which accelerates
+your basal metabolic rate (BMR) and helps you reduce excess body fat levels and lose
+weight in a healthy way.
+4. Total Body Water: Total Body Water is the total amount of fluid in the body expressed as a
+percentage of total weight. Body water is an essential part of staying healthy. Over half the
+body consists of water. It regulates body temperature and helps eliminate waste.
+5. Bone Mass: The predicted weight of bone mineral in your body. While your bone mass is
+unlikely to undergo noticeable changes in the short term, it’s important to maintain healthy
+bones by having a balanced diet rich in calcium and by doing plenty of weight-bearing
+exercises.
+6. Physique Rating: The amount of muscle and body fat levels decides your physique rating.
+Depending on physique rating human body type can be differentiated in nine body types. As
+your activity level changes, the balance of body fat and muscle mass will gradually change,
+which in affects your overall physique.
+7. Basal Metabolic Rate (BMR): The daily minimum level of energy or calories your body
+requires when at rest (including sleeping) in order to function effectively. Increasing muscle
+mass will speed up your basal metabolic rate (BMR). A person with a high BMR burns more
+calories at rest than a person with a low BMR.
+8. Metabolic Age: If your metabolic age is higher than your actual age, it’s an indication that
+you need to improve your metabolic rate.
+9. Body Mass Index (BMI): A standardized ratio of weight to height used as a general indicator
+of health.
+
+10. Fat Free Weight: Fat-free mass, also known as lean body mass, refers to all of your body
+components except fat. It includes your body's water, bone, organs, and muscle content.
+11. Subcutaneous Fat: As the name suggests subcutaneous fat is a fat located under the skin.
+The amount of subcutaneous fat you develop depends on genetics as well as lifestyle factors
+such as physical activity and diet. Subcutaneous fat is an important part of your body, but if
+your body is storing too much of it, you may be at a higher risk for health problems
+12. Skeletal Muscle %: A muscle which is connected to the skeleton to form part of the
+mechanical system which moves the limbs and other parts of the body. Skeletal muscle % is
+the ratio of your skeletal muscle mass to the total muscle mass multiplied by 100
+13. Body Protein %: Your body uses protein to build and repair tissues. You also use protein to
+make enzymes, hormones, and other body chemicals. Protein is an important building block
+of bones, muscles, cartilage, skin, and blood.
+14. Health Score: Your health score is calculated by assessment of all body parameters. The
+higher health score is an indication of good physical health.
+15. Blood Pressure: Blood pressure is determined both by the amount of blood your heart
+pumps and the amount of resistance to blood flow in your arteries. The more blood your
+heart pumps and the narrower your arteries, the higher your blood pressure. Uncontrolled
+high blood pressure increases your risk of serious health problems, including heart attack
+and stroke.
+16. Oxygen Saturation: Oxygen saturation is a measure of how much oxygen the blood is
+carrying as a percentage of the maximum it could carry. Low level of oxygen saturation can
+cause mild problems such as headaches and shortness of breath.
+17. Hemoglobin: Hemoglobin is a protein found in red blood cells. It gives blood its red color,
+and its job is to carry oxygen throughout your body. Low hemoglobin levels usually indicate
+that a person has anemia--></string>
+
 </resources>
